tests/ui/const-generics/mgca/size-of-generic-ptr-in-array-len.stderr
error: complex const arguments must be placed inside of a `const` block
  --> $DIR/size-of-generic-ptr-in-array-len.rs:6:9
   |
LL |     [0; size_of::<*mut T>()];
   |         ^^^^^^^^^^^^^^^^^^^

error: generic parameters may not be used in const operations
  --> $DIR/size-of-generic-ptr-in-array-len.rs:8:32
   |
LL |     [0; const { size_of::<*mut T>() }];
   |                                ^
   |
   = help: add `#![feature(opaque_generic_const_args)]` to allow generic expressions as the RHS of const items

error: aborting due to 2 previous errors

